misalignment fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -710,9 +710,6 @@ h3 {
   margin-top: 0.5rem;
   margin-left: -12.7rem;
 
-  @include media-breakpoint-between(xs, sm) {
-    margin-left: -5.5rem;
-  }
 }
 
 .highlightText-Circle ~ h2 {
